Added pubsub system and new API endpoint to allow HTTP containers generate by self the needed configs.
